--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.9",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.1",
+    "astro": "^4.15.9",
+    "class-variance-authority": "^0.7.0",
+    "cva": "npm:class-variance-authority",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
 }
